# orkestrator-v2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bun.lockb  bunfig.toml  conductor.json  orkestrator-ai.json  package.json  plan.md  tsconfig.electron.json  tsconfig.json  turbo.json  vite.config.ts
.codex/: hooks.json
.playwright-cli/: page-2026-06-18T18-08-47-825Z.yml
apps/backend/: package.json  tsconfig.json
apps/desktop/: package.json  tsconfig.electron.json
apps/ios/: README.md
apps/web/: bunfig.toml  index.html  package.json  vite.config.ts
apps/web-public/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
bridges/claude-bridge/: package.json
bridges/codex-bridge/: package.json
docker/: Dockerfile  entrypoint.sh  runtime-env.sh  workspace-setup.sh
docs/: code-review-prompt-enhancement-spec.md  current-review-prompt.md  remote-gateway.md
e2e/: BrowserTab.spec.ts  CodexComposeBar.spec.ts  CreateEnvironmentDialog.spec.ts  GlobalStyles.spec.ts  playwright.config.ts  tsconfig.json
electron/: gateway.ts  ipc.ts  main.ts  paths.ts  preload-api.ts  preload.ts  web-client-controller.ts  web-client-controls.ts  window.ts
scripts/: codesign-app.sh  download-bun.sh  download-claude.sh  download-codex.sh  download-opencode.sh  electron-dev.ts  install-packaged-app.ts  run-ios-simulator.ts  test-all.ts  test-ios.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/claude_cli/: mod.rs
src-tauri/src/claude_tmux/: hooks.rs  manager.rs  session.rs  transcript.rs
src-tauri/src/commands/: claude.rs  claude_tmux.rs  codex.rs  config.rs  environments.rs  github.rs  kanban.rs  local_servers.rs  local_terminal.rs  opencode.rs
src-tauri/src/credentials/: mod.rs  sync.rs
src-tauri/src/docker/: client.rs
src-tauri/src/local/: mod.rs  ports.rs  process.rs  pty.rs  servers.rs  worktree.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/storage/: mod.rs
tests/: setup.ts
(+742 files in other folders)
