[package]
name = "orkestrator-ai"
version = "0.4.24"
description = "Claude Code Environment Orchestrator - Manage isolated Docker-based dev environments"
authors = ["Arkaydeus"]
edition = "2021"

[lib]
name = "orkestrator_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"

# Docker integration
bollard = "0.18"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1.12.2"

# HTTP client for health checks
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Encoding
hex = "0.4"
base64 = "0.22"
tar = "0.4"

# Image processing (WebP conversion for kanban attachments)
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
] }

# Local environment support
rand = "0.8"
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

# Note: macOS keychain access now uses the `security` CLI tool instead of
# the security-framework crate. This allows us to retrieve credentials by
# service name only, without needing to know the account name.

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
wiremock = "0.6"
